--- a/101-all-chroms.Rmd
+++ b/101-all-chroms.Rmd
@@ -147,6 +147,9 @@ ggplot(rdf) +
 PlotAdmix("outputs/101/58-K2.qopt", m2)
 ```
 
+```{r}
+PlotAdmix("outputs/101/58-K3.qopt", m2)
+```
 
 ### Dropping India
 
@@ -165,4 +168,128 @@ srun -p high -t 1:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
 -out outputs/101/47-ibs-90 > outputs/101/47-ibs-90.out 2> outputs/101/47-ibs-90.err &
+
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90.beagle.gz -K 2 -o outputs/101/47-K2 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90.beagle.gz -K 3 -o outputs/101/47-K3 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90.beagle.gz -K 4 -o outputs/101/47-K4 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90.beagle.gz -K 5 -o outputs/101/47-K5 &
+
+# High maf
+srun -p high -t 1:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/47.bamlist -r NC_066833.1 \
+-ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 42 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
+-doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.20 \
+-out outputs/101/47-ibs-90-2 > outputs/101/47-ibs-90-2.out 2> outputs/101/47-ibs-90-2.err &
+
+
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90-2.beagle.gz -K 2 -o outputs/101/47-K2-2 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90-2.beagle.gz -K 3 -o outputs/101/47-K3-2 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90-2.beagle.gz -K 4 -o outputs/101/47-K4-2 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-ibs-90-2.beagle.gz -K 5 -o outputs/101/47-K5-2 &
+
+```
+
+	-> Number of sites retained after filtering: 231013 maf=0.05     
+	-> Number of sites retained after filtering: 49319  maf=0.20     
+
+```{r}
+meta<-m47
+m <- as.matrix(read.table("outputs/101/47-ibs-90-2.covMat"))
+eig <- eigen(m)
+var<-eig$values/sum(eig$values)
+cumvar<-cumsum(eig$values)/sum(eig$values)
+
+head(var)
+head(cumvar)
+```
+
+
+```{r}
+covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(meta)
+
+text12<-covs %>% select(Run, Region, V1, V2) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Region), pch=21, alpha=0.75) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="turbo") +
+  ggtitle("Genome-Wide PCA of L. calcarifer WGS Data") +
+  theme(plot.title = element_text(hjust=0.5, face="bold"))
+
+ggsave("outputs/101/lates-c-genome-wide-pca-12-oz-png-asia.jpeg")
+```
+```{r}
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Coverage), pch=21, alpha=0.75) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_c () +
+  ggtitle("Genome-Wide PCA of L. calcarifer WGS Data") +
+  theme(plot.title = element_text(hjust=0.5, face="bold"))
+```
+
+```{r}
+text13<-covs  %>% select(Run, Region, V1, V3) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V3))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V3, fill=Region), pch=21, alpha=0.75) +
+  geom_text_repel(data=text13, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC3", " ", round((100*var[3]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid = element_blank()) +
+  scale_fill_viridis_d(option="turbo")
+```
+
+
+
+```{r}
+PlotAdmix("outputs/101/47-K2-2.qopt", m47)
+```
+
+
+```{r}
+PlotAdmix("outputs/101/47-K3-2.qopt", m47)
+```
+
+```{r}
+PlotAdmix("outputs/101/47-K4-2.qopt", m47)
+```
+
+```{r}
+PlotAdmix("outputs/101/47-K5-2.qopt", m47)
+```
+With GLs, no doIBS
+
+```{sh}
+srun -p high -t 1:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/47.bamlist -r NC_066833.1 \
+-minInd 42 -GL 1 -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/101/47-gl > outputs/101/47-gl.out 2> outputs/101/47-gl.err &
+
+#srun -p high -t 1:00:00 python $HOME/pcangsd/pcangsd.py -beagle outputs/100/47-gl.beagle.gz -o outputs/100/47-gl -pca -threads 10
+
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-gl.beagle.gz -K 2 -o outputs/101/47-gl-K2 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-gl.beagle.gz -K 3 -o outputs/101/47-gl-K3 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-gl.beagle.gz -K 4 -o outputs/101/47-gl-K4 &
+srun -p high -t 01:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/101/47-gl.beagle.gz -K 5 -o outputs/101/47-gl-K5 &
+
+
+```
+ 166824 sites    
+
+```{r}
+PlotAdmix("outputs/101/47-gl-K2.qopt", m47)
 ```
